[gd_scene load_steps=2 format=2]

[ext_resource path="res://ble/hub_controls.gd" type="Script" id=1]

[node name="HubControl" type="VBoxContainer"]
margin_top = 24.0
margin_right = 237.0
margin_bottom = 44.0
size_flags_horizontal = 3
script = ExtResource( 1 )
connect_button = NodePath("HBoxContainer/connect_button")
run_button = NodePath("HBoxContainer/run_button")
scan_button = NodePath("HBoxContainer2/scan_button")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 237.0
margin_bottom = 40.0

[node name="ActiveButton" type="CheckButton" parent="HBoxContainer2"]
margin_right = 76.0
margin_bottom = 40.0
hint_tooltip = "Indicates whether hub will be connected via bluetooth when \"control devices\" is turned on.
This is set automatically when the hub is assigned to a train and the train is not in a \"disable train\" block.
Is also set automatically when a switch or crossing motor is assigned to a port of this hub."
button_mask = 0

[node name="BatteryLabel" type="Label" parent="HBoxContainer2"]
margin_left = 80.0
margin_top = 13.0
margin_right = 80.0
margin_bottom = 27.0

[node name="Control" type="Control" parent="HBoxContainer2"]
margin_left = 84.0
margin_right = 143.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="scan_button" type="Button" parent="HBoxContainer2"]
margin_left = 147.0
margin_right = 237.0
margin_bottom = 40.0
text = "Scan for hub"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 44.0
margin_right = 237.0
margin_bottom = 68.0

[node name="connect_button" type="Button" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run_button" type="Button" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 104.0
margin_bottom = 24.0
disabled = true
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadCheckbox" type="CheckBox" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 199.0
margin_bottom = 24.0
hint_tooltip = "Disable this to skip downloading the program. A hub stores its program until the firmware is updated."
text = "Download"

[connection signal="pressed" from="HBoxContainer2/scan_button" to="." method="_on_scan_button_pressed"]
[connection signal="pressed" from="HBoxContainer/connect_button" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="HBoxContainer/run_button" to="." method="_on_run_button_pressed"]
[connection signal="toggled" from="HBoxContainer/DownloadCheckbox" to="." method="_on_DownloadCheckbox_toggled"]
